--- a/2015-5-10/demos/ajax/server/views/xhr.ejs
+++ b/2015-5-10/demos/ajax/server/views/xhr.ejs
@@ -6,4 +6,39 @@
   </head>
   <body> 	
   </body>
+  <script type="text/javascript">
+  function cb(param1, param2){
+  	//todo
+  }
+  </script>
+  <script type="text/javascript" src="http://www.baidu.com/jsonp?callback=cb&name=132"></script>
 </html>
+
+
+<!-- xhr.send( JSON.strgify({'name' : 'lijinxin', age : 2354}) ); -->
+
+<!-- $.ajax({
+	method : 'POST',
+	url : 'localhost/res.php',
+	dataType : 'json',
+	data : {'name' : 'dshifugi', 'age' : 5522}
+});
+
+var xhr = new XMLHttpRequest();
+xhr.open(method, url);
+
+Content-Type : application/json 
+xhr.setRequestHeader('Content-Type ', 'x-www-form-urlencoded');
+url =  url+'?'+'name=dshifugi'+'&'+'age=5522';
+ -->
+
+
+ <!-- 
+ <form action="localhost/res.php" method="POST">
+ 	<input type="text" >
+ 	<input type="text">
+ </form>
+  -->
+
+
+
